# cpp_books_practice

./: .gitignore  CMakeLists.txt
ppp2/: CMakeLists.txt
ppp2/ch6/: CMakeLists.txt  calculator.cpp
ppp2/ch7/: CMakeLists.txt  refined_calculator.cpp
ppp2/ch8/: CMakeLists.txt  Calculator.cpp  Calculator.hpp  Constants.hpp  Token_stream.cpp  Token_stream.hpp  Variables.cpp  Variables.hpp  divided_calculator.cpp
ppp2/ch9/src/: CMakeLists.txt  Rational.cpp  Rational.hpp  Rational_number.cpp  Rational_number.hpp
ppp2/ch9/test/: CMakeLists.txt  test_Rational.cpp  test_Rational_number.cpp
